# initial_cpp

./: .xdp_f_r.cpp.705I21  .xdp_f_ran.cpp.429S21  .xdp_fun.cpp.YR9H21  .xdp_funcion_rnd.cpp.QAMH21  .xdp_prueba_de_funcion.cpp.P9JZ21  001pointers_exercise  001pointers_exercise.cpp  8_2grades  8_2grades.cpp  OperaNewDelate  PrtToStr001  PrtToStr001.cpp  a.out  apuntador_arreglo  apuntadores_1.cpp  arreglos_1  arreglos_1.cpp  arreglos_charac  binary_tree.cpp  buscaminas  buscaminas.cpp  c_cpp_27  c_cpp_27.cpp  c_prueba_2.cpp  calse01  calse01.cpp  ccurl.cpp  circulo_calculos  circulo_funciones  circulo_funciones.cpp  clases001.cpp  clases002  clases002.cpp  clases003  clases003.cpp  codeb1_easy  codeb1_easy.cpp  codeb1_str.cpp  codeb2_2easy  codeb2_2easy.cpp  (+79 more)
Arreglos/: array01  array01.cpp  array02  array02.cpp  array03  array03.cpp  array04  array04.cpp  arregloDePunteros.cpp  arreglos001.cpp  arreglos03  arreglos03.cpp  arreglosAleatoriosSuma_01  arreglosAleatoriosSuma_01.cpp  arreglosChar.cpp  arreglosFucion003.cpp  arreglosFucion03  arreglosFucion03.cpp  punteroArreglo01  punteroArreglo01.cpp  vectores_suma_leetcode.cpp
ArreglosBidimensionales/: matrices001  matrices003.cpp  matriz001.cpp  punteroArrayBidimenToFunc.cpp  punteroArrayBidimenToFunc02.cpp  vector001  vector001.cpp
Clases/: accesingDataMembers  accesingDataMembers.cpp  clases002.cpp  clases003  clases003.cpp  clases004  clases004.cpp  (+11 more)
my_task_manager/: CMakeLists.txt  readme.txt
my_task_manager/data/: tasks.json
my_task_manager/src/: main.cpp
sport_service/: CMakeLists.txt
sport_service/src/: main.cpp
(+161 files in other folders)
